<?xml version="1.0" encoding="utf-8"?>
<!--
      Copyright (C) 2023 Curity AB

      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
    -->
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.HomeFragment">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="38dp"
            android:text="@string/title_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_home"
            style="@style/TextAppearance.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="38dp"
            android:text="@string/description_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_startillustration"
            app:layout_constraintEnd_toEndOf="@+id/description_home"
            app:layout_constraintStart_toStartOf="@+id/description_home"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/description_home"
            app:layout_constraintBottom_toTopOf="@+id/button"
            android:contentDescription="@string/start_auth_content_description"
            />

        <io.curity.haapidemo.uicomponents.ProgressButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="72dp"
            android:text="@string/button_home"
            android:onClick="onStartAuthorizationClick"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
