<?xml version="1.0" encoding="utf-8"?>
<!--
      Copyright 2021 Curity AB

      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
    -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable name="model" type="io.curity.haapidemo.authenticated.TokensFragment.TokensViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/example_logo"
                    android:contentDescription="@string/logo_content_description"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="18dp" />

                <TextView
                    android:id="@+id/text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/success"
                    android:textAppearance="@style/TextAppearance.TitleHeader"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/disclosure_view_shape"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:visibility="@{model.liveUserInfo == null ? View.GONE : View.VISIBLE}"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/userinfo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical"
                android:gravity="start"
                android:layout_margin="@dimen/spacing"
            />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding" />

        <io.curity.haapidemo.authenticated.uicomponents.DisclosureView
            android:id="@+id/access_disclosure_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/access_token"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding" />

        <LinearLayout
            android:id="@+id/linear_layout_id_token"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{model.idToken == null ? View.GONE : View.VISIBLE}">

            <io.curity.haapidemo.authenticated.uicomponents.DisclosureView
                android:id="@+id/id_token_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleText="@string/id_token"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding" />
        </LinearLayout>


        <io.curity.haapidemo.authenticated.uicomponents.DisclosureView
            android:id="@+id/refresh_disclosure_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{model.refreshToken == null ? View.GONE : View.VISIBLE}"
            app:titleText="@string/refresh_token"
            titleText="@string/refresh_token"/>

        <io.curity.haapidemo.uicomponents.ProgressButton
            android:id="@+id/refresh_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/refresh_token"
            android:enabled="@{model.refreshToken != null}"
            android:onClick="@{model::refreshToken}" />

        <io.curity.haapidemo.uicomponents.ProgressButton
            android:id="@+id/signout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/sign_out"
            android:onClick="@{model::logout}" />

    </LinearLayout>
</layout>